force-app/main/default/objects/Queue__c/Queue__c.object-meta.xml
<CustomObject>
    <label>Queue</label>
    <nameField>
        <label>Place</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>