force-app/main/default/objects/Queue__c/fields/Cost_For_Two__c.field-meta.xml
<CustomField>
    <fullName>Cost_For_Two__c</fullName>
    <label>Cost For Two</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>