force-app/main/default/objects/Queue__c/fields/Expected_Dishes_To_Have__c.field-meta.xml
<CustomField>
    <fullName>Expected_Dishes_To_Have__c</fullName>
    <label>Expected Dishes To Have</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>