force-app/main/default/objects/Queue__c/fields/Serves__c.field-meta.xml
<CustomField>
    <fullName>Serves__c</fullName>
    <label>Serves</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>